<resources>
    <string name="app_name">Tabmaster</string>
    <string name="serveur_ip">http://192.168.43.131:80</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">955203431265082</string>
    <string name="action_settings">Settings</string>
    <string name="title_defilement">Scrolling</string>
    <string name="title_facebook">Facebook connection page</string>
    <string name="connection_state">Not Connected</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="play_button">Play button</string>
    <string name="open_tab">Open tab</string>
    <string name="title_rectest_act">Record Test Activity</string>
    <string name="rec_samp_act">Record Sample Activity</string>
    <string name="bpm">BPM :</string>
    <string name="strongTitleDefault"><b>Dj Hamida</b> <i>Déconnecté</i></string>
    <string name="smallTitle"><i>L\'applications des musicens en herbe</i></string>
    <string name="welcom">Pour commencer merci de vous connecter en cliquant sur Facebook dans le menu de gauche</string>
    <string name="open_comments">Open comments</string>
    <string name="title_facebook_comments">Comments</string>
    <string name="music_library">Music Library</string>
    <string name="record_a_new_music">Record a new music</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="music">Music</string>
    <string name="reglages">Settings</string>
    <string name="homepage">Homepage</string>
    <string name="title_record">Record</string>
    <string name="return_homepage">Get back on the homepage</string>


</resources>
